test/Fail/ParseErrorGHCPragma.err
ParseErrorGHCPragma.agda:7,1-22: error: [GenericError]
Failed to parse GHC pragma ''
